--- a/index.html
+++ b/index.html
@@ -1,82 +1,61 @@
-import React from "react";
-import Image from "next/image";
+iimport React from "react";
+import { Button } from "@/components/ui/button";
 
 export default function Home() {
   return (
-    <div className="bg-black text-white min-h-screen">
-      {/* Sección Hero */}
-      <div className="flex flex-col items-center justify-center text-center py-20 px-4 bg-[#1a1a1a]">
-        <h1 className="text-4xl md:text-6xl font-bold text-[#DFA878]">
+    <main className="min-h-screen bg-gradient-to-r from-black to-zinc-900 text-white">
+      <section className="text-center py-32 px-4">
+        <h1 className="text-4xl md:text-6xl font-bold mb-4">
           Viste con Poder. Viste Sahara.
         </h1>
-        <p className="mt-4 text-lg md:text-xl text-[#f4e3d7]">
+        <p className="text-lg md:text-xl mb-6">
           Ropa deportiva de alta calidad hecha en Colombia
         </p>
-        <button className="mt-6 bg-[#a65c34] hover:bg-[#8c4528] text-white font-semibold py-2 px-6 rounded-xl shadow-md">
+        <Button className="bg-yellow-600 hover:bg-yellow-500 text-black font-semibold">
           Ver productos
-        </button>
-      </div>
+        </Button>
+      </section>
 
-      {/* Sección de productos */}
-      <section className="py-16 px-4 bg-[#0d0d0d]">
-        <h2 className="text-3xl font-bold text-center mb-12 text-white">Nuestros Productos</h2>
-
-        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-          {/* Producto 1 */}
-          <div className="bg-[#1a1a1a] rounded-xl overflow-hidden shadow-lg">
-            <Image
-              src="/producto1.png"
-              alt="Top Deportivo Sahara"
-              width={500}
-              height={300}
-              className="w-full object-cover"
-            />
-            <div className="p-4">
-              <h3 className="text-xl font-semibold mb-2 text-[#f4e3d7]">Top Deportivo Sahara</h3>
-              <p className="text-[#e0c9b1] mb-4">$49.900</p>
-              <button className="bg-[#a65c34] hover:bg-[#8c4528] text-white py-2 px-4 rounded-xl">
-                Ver más
-              </button>
-            </div>
+      <section className="bg-white text-black py-16 px-4">
+        <h2 className="text-3xl font-bold text-center mb-8">Nuestros Productos</h2>
+        <div className="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+          {/* Aquí irán las tarjetas de productos reales más adelante */}
+          <div className="bg-white p-6 rounded-2xl shadow-md">
+            <div className="h-48 bg-zinc-200 rounded-xl mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Sudadera Clásica</h3>
+            <p className="text-sm text-zinc-600 mb-2">Confección 100% colombiana</p>
+            <span className="font-bold text-lg">$120.000</span>
           </div>
-
-          {/* Producto 2 */}
-          <div className="bg-[#1a1a1a] rounded-xl overflow-hidden shadow-lg">
-            <Image
-              src="/producto2.png"
-              alt="Leggins de Compresión"
-              width={500}
-              height={300}
-              className="w-full object-cover"
-            />
-            <div className="p-4">
-              <h3 className="text-xl font-semibold mb-2 text-[#f4e3d7]">Leggins de Compresión</h3>
-              <p className="text-[#e0c9b1] mb-4">$79.900</p>
-              <button className="bg-[#a65c34] hover:bg-[#8c4528] text-white py-2 px-4 rounded-xl">
-                Ver más
-              </button>
-            </div>
+          <div className="bg-white p-6 rounded-2xl shadow-md">
+            <div className="h-48 bg-zinc-200 rounded-xl mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Top Deportivo</h3>
+            <p className="text-sm text-zinc-600 mb-2">Diseño cómodo y versátil</p>
+            <span className="font-bold text-lg">$65.000</span>
           </div>
-
-          {/* Producto 3 */}
-          <div className="bg-[#1a1a1a] rounded-xl overflow-hidden shadow-lg">
-            <Image
-              src="/producto3.png"
-              alt="Sudadera Sahara"
-              width={500}
-              height={300}
-              className="w-full object-cover"
-            />
-            <div className="p-4">
-              <h3 className="text-xl font-semibold mb-2 text-[#f4e3d7]">Sudadera Sahara</h3>
-              <p className="text-[#e0c9b1] mb-4">$99.900</p>
-              <button className="bg-[#a65c34] hover:bg-[#8c4528] text-white py-2 px-4 rounded-xl">
-                Ver más
-              </button>
-            </div>
+          <div className="bg-white p-6 rounded-2xl shadow-md">
+            <div className="h-48 bg-zinc-200 rounded-xl mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Leggins Sahara Fit</h3>
+            <p className="text-sm text-zinc-600 mb-2">Resistentes y con estilo</p>
+            <span className="font-bold text-lg">$90.000</span>
           </div>
         </div>
       </section>
-    </div>
+
+      <section className="bg-zinc-100 py-16 px-4">
+        <h2 className="text-3xl font-bold text-center mb-6">Nosotros</h2>
+        <p className="max-w-3xl mx-auto text-center text-lg text-zinc-800">
+          En Sahara Wear creemos en el poder de vestir con confianza, apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.
+        </p>
+      </section>
+
+      <section className="bg-zinc-900 text-white py-16 px-4">
+        <h2 className="text-3xl font-bold text-center mb-6">Contacto</h2>
+        <div className="text-center space-y-3">
+          <p>Correo: <a href="mailto:saharawear@hotmail.com" className="underline">saharawear@hotmail.com</a></p>
+          <p>Instagram: <a href="https://www.instagram.com/sahara__wear" className="underline" target="_blank">@sahara__wear</a></p>
+          <p>Facebook: <a href="https://www.facebook.com/share/16CR9DFW3t" className="underline" target="_blank">fb.com/share/16CR9DFW3t</a></p>
+        </div>
+      </section>
+    </main>
   );
 }
